--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "axios": "^0.18.0",
     "expo": "^32.0.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
