--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9",
-    "react-redux": "^7.0.2",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-api-middleware": "^3.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
