--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "axios": "^0.18.0",
-    "base": "^3.0.0",
     "expo": "^32.0.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "native": "^0.3.3",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
